--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ li {
   background-color: var(--aсcent-color);
 }
 
+
 .detailed-list .item__range {
   margin-left: auto;
   font-size: 13px;
@@ -303,7 +304,7 @@ li {
 
 .contact__icon {
   margin-right: 10px;
-  min-width: 20px;
+  width: 20px;
   height: 20px;
   border-radius: 9px;
   border: 2px solid var(--base-color);
